more dark mode fixes.

--- a/theme-dark.scss
+++ b/theme-dark.scss
@@ -35,6 +35,7 @@ $toc-inactive-border: rgba($gray-800, 0.5);
 $input-text-background-color: $gray-800;
 $input-group-addon-bg: $gray-800;
 $carousel-dark-caption-color: $body-color;
+$pagination-disabled-bg: rgb(24,24,24);
 
 /*-- scss:rules --*/
 
@@ -59,6 +60,7 @@ pre code {
   color: $body-color;
 }
 
+figcaption code,
 dl code,
 h1 code,
 h2 code,
